--- a/views/partials/incs/footer.hbs
+++ b/views/partials/incs/footer.hbs
@@ -23,7 +23,7 @@
 <script>
 //var appUrl = 'http://63.250.44.29:4020';
 //var devUrl = 'https://lexacle.com/';
-var appUrl = 'https://tufikepamoja.herokuapp.com/';
+var appUrl = 'https://tufikepamoja.herokuapp.com';
 var devUrl = 'https://lexacle.com/';
 var socket = io.connect(appUrl);
 </script>
