--- a/views/partials/incs/footer.hbs
+++ b/views/partials/incs/footer.hbs
@@ -22,7 +22,7 @@
 <script src="https://maps.googleapis.com/maps/api/js?&libraries=places&key=AIzaSyB93SMw6mEfNZrcjOduAMkuJgFg5zcme04"></script>
 <script>
 //var appUrl = 'http://63.250.44.29:4020';
-//var devUrl = 'https://lexacle.com/';
+//var appUrl = 'http://localhost:4080';
 var appUrl = 'https://tufikepamoja.herokuapp.com';
 var devUrl = 'https://lexacle.com/';
 var socket = io.connect(appUrl);
