--- a/views/partials/incs/header.hbs
+++ b/views/partials/incs/header.hbs
@@ -18,6 +18,8 @@
   <link rel="stylesheet" href="/assets/admin/plugins/datatables/datatables.min.css"/>
   <link rel="stylesheet" href="/assets/admin/plugins/bootstrap-material-datetimepicker/css/bootstrap-material-datetimepicker.css" />
   <link rel="stylesheet" href="/assets/admin/plugins/select2/css/select2.css"/>
+  <link rel="stylesheet" href="/assets/admin/plugins/nouislider/nouislider.min.css"/>
+  <link rel="stylesheet" href="/assets/admin/plugins/node-waves/waves.min.css"/>
   <link rel="stylesheet" href="/assets/admin/plugins/lightg/css/lightgallery.css"/>
   <link rel="stylesheet" href="/assets/admin/plugins/sweetalert2/dist/sweetalert2.css"/>
   <link rel="stylesheet" href="/assets/admin/plugins/chartjs/Chart.min.css"/>
@@ -25,7 +27,7 @@
   <link href="/assets/admin/css/chat-dark.min.css" rel="stylesheet" />
   <link href="/assets/admin/css/icons.css" rel="stylesheet" />
   <link href="/assets/admin/css/app.css" rel="stylesheet" />
-  <link rel="stylesheet" href="/assets/admin/plugins/pace/themes/blue/pace-theme-material.css">
+  <link rel="stylesheet" href="/assets/admin/plugins/pace/themes/blue/pace-theme-minimal.css">
   <!--
   <script src="https://cdn.onesignal.com/sdks/OneSignalSDK.js" async=""></script>
   <script>
