--- a/views/partials/modules/chartpreference.hbs
+++ b/views/partials/modules/chartpreference.hbs
@@ -1,5 +1,5 @@
 <div class="card">
   <div class="card-body mh-cms pt-4">
-    <canvas id="preference-canvas"></canvas>
+    <canvas id="preference-canvas" height="150"></canvas>
   </div>
 </div>
