--- a/views/partials/modules/cms.hbs
+++ b/views/partials/modules/cms.hbs
@@ -31,49 +31,37 @@
         <table class="table">
           <tbody>
             <tr>
-              <td class="td-actions text-right">
-                <button type="button" rel="tooltip" title="" class="btn btn-white btn-link btn-sm edit-about" data-original-title="Edit Content">
-                  <i class="material-icons">edit</i>
-                </button>
-              </td>
-            </tr>
-            <tr>
               <td class="about-content"></td>
             </tr>
           </tbody>
         </table>
+        <a rel="tooltip" href="javascript:void(0)" title="" class="orange-link edit-about" data-original-title="Edit Content">
+          <i class="material-icons">edit</i>
+        </a>
       </div>
       <div class="tab-pane" id="terms-of-use">
         <table class="table">
           <tbody>
             <tr>
-              <td class="td-actions text-right">
-                <button type="button" rel="tooltip" title="" class="btn btn-white btn-link btn-sm" data-original-title="Edit Content">
-                  <i class="material-icons edit-terms">edit</i>
-                </button>
-              </td>
-            </tr>
-            <tr>
               <td class="terms-content"></td>
             </tr>
           </tbody>
         </table>
+        <a rel="tooltip" href="javascript:void(0)" title="" class="orange-link edit-terms" data-original-title="Edit Content">
+          <i class="material-icons">edit</i>
+        </a>
       </div>
       <div class="tab-pane" id="privacy-policy">
         <table class="table">
           <tbody>
             <tr>
-              <td class="td-actions text-right">
-                <button type="button" rel="tooltip" title="" class="btn btn-white btn-link btn-sm edit-privacy" data-original-title="Edit Content">
-                  <i class="material-icons">edit</i>
-                </button>
-              </td>
-            </tr>
-            <tr>
               <td class="privacy-content"></td>
             </tr>
           </tbody>
         </table>
+        <a rel="tooltip" href="javascript:void(0)" title="" class="orange-link edit-privacy" data-original-title="Edit Content">
+          <i class="material-icons">edit</i>
+        </a>
       </div>
     </div>
   </div>
