--- a/views/partials/modules/cmseditor.hbs
+++ b/views/partials/modules/cmseditor.hbs
@@ -8,6 +8,6 @@
     <div class="cms-bg">
     <textarea class="cms-editor form-control" id="editor" spellcheck="false"></textarea>
   </div>
-  <button class="btn btn-success float-right mt-3 mr-2 update-cms">Update Changes</button>
+  <button class="btn bg-orange float-right mt-3 mr-2 update-cms">Update Changes</button>
   </div>
 </div>
