--- a/views/partials/modules/driverpayments.hbs
+++ b/views/partials/modules/driverpayments.hbs
@@ -4,7 +4,7 @@
       <div class="nav-tabs-wrapper">
         <ul class="nav nav-tabs" data-tabs="tabs">
           <li class="nav-item">
-            <a class="nav-link active" href="/payments">
+            <a class="nav-link active" href="/transactions">
               <i class="f7-icons">money_dollar_circle</i> Tufike Pamoja Recent Driver Payments
               <div class="ripple-container"></div>
             </a>
