--- a/views/partials/pages/points.hbs
+++ b/views/partials/pages/points.hbs
@@ -8,7 +8,7 @@
               <a href="javascript:void(0)" class="refresh-data float-right">
                 <i class="material-icons" role="button">refresh</i>
               </a>
-              <button class="btn btn-warning animate__animated animate__fadeIn btn-large btn-round btn-super add-setup"><i class="material-icons size-40">settings</i></button>
+              <button class="btn bg-orange animate__animated animate__fadeIn btn-large btn-circle waves-effect waves-float btn-super add-setup"><i class="f7-icons">gear_alt_fil</i></button>
             </h4>
           </div>
           <div class="card-body xpage">
