--- a/views/partials/pages/riders.hbs
+++ b/views/partials/pages/riders.hbs
@@ -8,7 +8,7 @@
                 <a href="javascript:void(0)" class="refresh-data float-right">
                   <i class="material-icons" role="button">refresh</i>
                 </a>
-                <button class="btn btn-warning animate__animated animate__fadeIn btn-large btn-round btn-super notify-all-riders hidden"><i class="material-icons">notifications_active</i></button>
+                <button class="btn bg-orange animate__animated animate__fadeIn btn-large btn-circle waves-effect waves-circle waves-float btn-super notify-all-riders hidden"><i class="material-icons">notifications_active</i></button>
             </h4>
           </div>
           <div class="card-body xpage">
