--- a/views/partials/pages/settings.hbs
+++ b/views/partials/pages/settings.hbs
@@ -4,10 +4,10 @@
       <div class="col-md-12">
         <div class="card data-card">
           <div class="card-header card-header-success live-load">
-            <h4 class="card-title ">Tufike Pamoja Settings
-                <a href="javascript:void(0)" class="refresh-data float-right">
-                  <i class="material-icons" role="button">refresh</i>
-                </a>
+            <h4 class="card-title">Tufike Pamoja Settings
+                <button class="btn btn-sm mt-0 mb-0 bg-purple waves-effect update-system float-right">
+                  Update System
+                </button>
             </h4>
           </div>
           <div class="card-body xpage">
