--- a/views/partials/incs/footer.hbs
+++ b/views/partials/incs/footer.hbs
@@ -19,17 +19,29 @@
 <script src="/assets/admin/plugins/sweetalert2/dist/sweetalert2.min.js"></script>
 <script src="/assets/admin/plugins/chartjs/Chart.min.js"></script>
 <script src="/assets/admin/plugins/pace/pace.min.js"></script>
+<script src="/assets/admin/plugins/nouislider/nouislider.js"></script>
 <script src="https://maps.googleapis.com/maps/api/js?&libraries=places&key=AIzaSyB93SMw6mEfNZrcjOduAMkuJgFg5zcme04"></script>
 <script>
-//var appUrl = 'http://63.250.44.29:4020';
-//var appUrl = 'http://localhost:4080';
+var env = 'test';
+if (env === 'dev') {
+var appUrl = 'http://localhost:4080';
+var devUrl = 'http://localhost/lexacle/';
+var cloudUrl = 'https://cloud.lexacle.com/vapor';
+} else if (env === 'live') {
+var appUrl = 'http://63.250.44.29:4020';
+var devUrl = 'https://lexacle.com/';
+var cloudUrl = 'https://cloud.lexacle.com/vapor';
+} else if (env === 'test') {
 var appUrl = 'https://tufikepamoja.herokuapp.com';
 var devUrl = 'https://lexacle.com/';
+var cloudUrl = 'https://cloud.lexacle.com/vapor';
+}
 var socket = io.connect(appUrl);
 </script>
 <script src="/assets/admin/js/mapstyles.js"></script>
 <script src="/assets/admin/js/core.js"></script>
 <script src="/assets/admin/js/app.js"></script>
+<script src="/assets/admin/js/live.js"></script>
 <script>{{pdata.pagefunctions}}</script>
 </body>
 </html>
