--- a/views/partials/pages/promotions.hbs
+++ b/views/partials/pages/promotions.hbs
@@ -8,7 +8,7 @@
                 <a href="javascript:void(0)" class="refresh-data float-right">
                   <i class="material-icons" role="button">refresh</i>
                 </a>
-                <button class="btn btn-warning animate__animated animate__fadeIn btn-large btn-round btn-super add-promo hidden"><i class="material-icons">add</i></button>
+                <button class="btn bg-orange animate__animated animate__fadeIn btn-large btn-circle waves-effect waves-circle waves-float btn-super add-promo hidden"><i class="material-icons">add</i></button>
             </h4>
           </div>
           <div class="card-body xpage">
