--- a/views/partials/incs/header.hbs
+++ b/views/partials/incs/header.hbs
@@ -8,26 +8,26 @@
   <link rel="shortcut icon" type="image/x-icon" href="/assets/admin/img/logos/favicon-32x32.png">
   <link rel="apple-touch-icon" href="/assets/admin/img/logos/apple-touch-icon-180x180.png">
   <meta name="theme-color" content="#8721c2">
-  <link href="/assets/admin/css/material-dashboard.css" rel="stylesheet" />
-  <link href="/assets/admin/plugins/nprogress/nprogress.css" rel="stylesheet" />
-  <link href="/assets/admin/plugins/animate.css/animate.min.css" rel="stylesheet" />
-  <link href="/assets/admin/plugins/magic/magic.min.css" rel="stylesheet" />
+  <link href="/assets/admin/css/material-dashboard.css" rel="stylesheet" type="text/css"/>
+  <link href="/assets/admin/plugins/nprogress/nprogress.css" rel="stylesheet" type="text/css"/>
+  <link href="/assets/admin/plugins/animate.css/animate.min.css" rel="stylesheet" type="text/css"/>
+  <link href="/assets/admin/plugins/magic/magic.min.css" rel="stylesheet" type="text/css"/>
   <link href="/assets/admin/plugins/magnific/magnific-popup.css" rel="stylesheet" type="text/css" />
-  <link rel="stylesheet" href="/assets/admin/plugins/owl.carousel/assets/owl.carousel.min.css">
-  <link rel="stylesheet" href="/assets/admin/plugins/owl.carousel/assets/owl.theme.default.min.css">
-  <link rel="stylesheet" href="/assets/admin/plugins/datatables/datatables.min.css"/>
-  <link rel="stylesheet" href="/assets/admin/plugins/bootstrap-material-datetimepicker/css/bootstrap-material-datetimepicker.css" />
-  <link rel="stylesheet" href="/assets/admin/plugins/select2/css/select2.css"/>
-  <link rel="stylesheet" href="/assets/admin/plugins/nouislider/nouislider.min.css"/>
-  <link rel="stylesheet" href="/assets/admin/plugins/node-waves/waves.min.css"/>
-  <link rel="stylesheet" href="/assets/admin/plugins/lightg/css/lightgallery.css"/>
-  <link rel="stylesheet" href="/assets/admin/plugins/sweetalert2/dist/sweetalert2.css"/>
-  <link rel="stylesheet" href="/assets/admin/plugins/chartjs/Chart.min.css"/>
+  <link rel="stylesheet" href="/assets/admin/plugins/owl.carousel/assets/owl.carousel.min.css" type="text/css">
+  <link rel="stylesheet" href="/assets/admin/plugins/owl.carousel/assets/owl.theme.default.min.css" type="text/css">
+  <link rel="stylesheet" href="/assets/admin/plugins/datatables/datatables.min.css" type="text/css"/>
+  <link rel="stylesheet" href="/assets/admin/plugins/bootstrap-material-datetimepicker/css/bootstrap-material-datetimepicker.css" type="text/css"/>
+  <link rel="stylesheet" href="/assets/admin/plugins/select2/css/select2.css" type="text/css"/>
+  <link rel="stylesheet" href="/assets/admin/plugins/nouislider/nouislider.min.css" type="text/css"/>
+  <link rel="stylesheet" href="/assets/admin/plugins/node-waves/waves.min.css" type="text/css"/>
+  <link rel="stylesheet" href="/assets/admin/plugins/lightg/css/lightgallery.css" type="text/css"/>
+  <link rel="stylesheet" href="/assets/admin/plugins/sweetalert2/dist/sweetalert2.css" type="text/css"/>
+  <link rel="stylesheet" href="/assets/admin/plugins/chartjs/Chart.min.css" type="text/css"/>
   <link rel="manifest" href="/manifest.json">
-  <link href="/assets/admin/css/chat-dark.min.css" rel="stylesheet" />
-  <link href="/assets/admin/css/icons.css" rel="stylesheet" />
-  <link href="/assets/admin/css/app.css" rel="stylesheet" />
-  <link rel="stylesheet" href="/assets/admin/plugins/pace/themes/blue/pace-theme-minimal.css">
+  <link href="/assets/admin/css/chat-dark.min.css" rel="stylesheet" type="text/css"/>
+  <link href="/assets/admin/css/icons.css" rel="stylesheet" type="text/css"/>
+  <link href="/assets/admin/css/app.css" rel="stylesheet" type="text/css"/>
+  <link rel="stylesheet" href="/assets/admin/plugins/pace/themes/blue/pace-theme-minimal.css" type="text/css">
   <!--
   <script src="https://cdn.onesignal.com/sdks/OneSignalSDK.js" async=""></script>
   <script>
