--- a/public/assets/admin/css/material-dashboard.css
+++ b/public/assets/admin/css/material-dashboard.css
@@ -933,6 +933,10 @@ mark,
     padding: 0.2em;
     background-color: #fcf8e3;
 }
+.w-pad
+{
+  padding-right: 40px;
+}
 .btn {
   display: inline-block;
   font-weight: 400;
@@ -3712,6 +3716,22 @@ tbody.collapse.show {
 }
 
 @media (max-width: 991.98px) {
+  .navbar-expand-lg
+  {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    z-index: 1020;
+  }
+  .d-xs-none
+  {
+    display: none;
+  }
+  .w-pad
+  {
+    text-align: center;
+  }
     .navbar-expand-lg>.container,
     .navbar-expand-lg>.container-fluid {
         padding-right: 0;
@@ -3721,8 +3741,16 @@ tbody.collapse.show {
 
 @media (min-width: 992px) {
     .navbar-expand-lg {
+        position: sticky;
+        top: 0;
+        z-index: 1020;
         flex-flow: row nowrap;
         justify-content: flex-start;
+    }
+    .w-pad
+    {
+      text-align: right;
+      padding-right: 60px;
     }
     .navbar-expand-lg .navbar-nav {
         flex-direction: row;
@@ -3929,7 +3957,8 @@ tbody.collapse.show {
 
 .navbar-dark .navbar-toggler {
     color: rgba(255, 255, 255, 0.5);
-    border-color: rgba(255, 255, 255, 0.1);
+    border-color: rgba(255, 255, 255, 0.0);
+    border: none !important;
 }
 
 .navbar-dark .navbar-toggler-icon {
@@ -12057,7 +12086,7 @@ fieldset[disabled] .form-group.is-focused .togglebutton label {
 }
 
 .main-panel>.content {
-    margin-top: 0px;
+    margin-top: 40px;
     padding: 15px 15px;
     min-height: calc(100vh - 123px);
 }
