--- a/views/partials/incs/modals.hbs
+++ b/views/partials/incs/modals.hbs
@@ -10,6 +10,28 @@
     </div>
   </div>
 </div>
+<div class="modal fade" id="pay-sms" role="dialog" aria-hidden="true">
+  <div class="modal-dialog modal-col-dark">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title blue-link" id="exampleModalLabel">Top Up Your SMS Balance</h5>
+        <button type="button" class="close col-white" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <div class="list-group">
+          <a class="list-group-item">Using your MPesa-enabled phone, select <b class="blue-link">Pay Bill</b> from the M-Pesa menu</a>
+          <a class="list-group-item">Enter Africa's Talking Business Number <b class="blue-link">525900</b></a>
+          <a class="list-group-item">Enter your Africa's Talking Account Number. Your account number is <b class="blue-link">tufike.api</b></a>
+          <a class="list-group-item">Enter the Amount of credits you want to buy</a>
+          <a class="list-group-item">Confirm that all the details are correct and press Ok</a>
+          <a class="list-group-item">On successfull transaction your SMS balance will be automatically updated</a>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
 <div class="modal fade" id="modal-enroute" role="dialog" aria-hidden="true">
   <div class="modal-dialog modal-col-dark modal-lg mt-20">
     <div class="modal-content">
@@ -369,6 +391,21 @@
   </div>
 </div>
 
+<div class="modal fade" id="view-driver-location-modal" tabindex="-1" role="dialog" aria-labelledby="view-client-location-modal" aria-hidden="true">
+  <div class="modal-dialog modal-col-dark">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title driver-name-title" id="exampleModalLabel">Driver Location</h5>
+        <button type="button" class="close col-white" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body map-driver-location" id="map-driver-location">
+      </div>
+    </div>
+  </div>
+</div>
+
 <div class="modal fade" id="cms-edit-modal" tabindex="-1" role="dialog" aria-labelledby="cms-edit-modal" aria-hidden="true">
   <div class="modal-dialog modal-col-blue-dark">
     <div class="modal-content">
@@ -378,6 +415,8 @@
     </div>
   </div>
 </div>
+
+
 
 <div class="modal fade" id="add-promo-modal" tabindex="-1" role="dialog" aria-labelledby="add-promo-modal" aria-hidden="true">
   <div class="modal-dialog modal-col-dark">
