--- a/views/partials/incs/pagefooter.hbs
+++ b/views/partials/incs/pagefooter.hbs
@@ -1,16 +1,19 @@
 <footer class="xfooter sticky-bottom">
 	<div class="row">
-		<div class="col-md-2">
+		<div class="col-md-2 d-xs-none">
 			<i class="f7-icons size-20 align-middle nm-x text-success">person_3_fill</i>
 			<span class="count-connect fix-foot"></span>
 		</div>
-		<div class="col-md-2">
+		<div class="col-md-2 d-xs-none">
 			<i class="f7-icons size-15 align-middle nm-x text-info">folder_circle_fill</i>
 			<span class="free-gb fix-foot"></span>
 		</div>
-		<div class="col-md-2">
+		<div class="col-md-2 d-xs-none">
 			<i class="f7-icons size-15 align-middle text-primary">text_bubble_fill</i>
-			<span class="sms-balance fix-foot">Loading SMS API</span>
+			<a href="javascript:void(0)" class="sms-balance fix-foot green-link pay-sms">Loading SMS API</a>
+		</div>
+		<div class="col-md-6 w-pad">
+			<a href="https://lexacle.com" target="_blank" class="fix-foot green-link">&copy; <span class="current-year blue-link"></span> Lexacle Technologies Ltd</a>
 		</div>
 	</div>
 </footer>
