--- a/views/partials/modules/setup.hbs
+++ b/views/partials/modules/setup.hbs
@@ -1,130 +1,64 @@
 <div class="row">
-                <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
-                    <div class="info-box-2 bg-blue waves-effect">
-                        <div class="icon">
-                            <img src="/assets/admin/img/icons/dropbox.svg" width="80"/>
-                        </div>
-                        <div class="content">
-                            <div class="text">DROPBOX</div>
-                            <div class="number count-to dp-size-stats">Loading</div>
-                            <div class="progress">
-                                <div class="progress-bar progress-bar-info dp-pro" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100"
-                                     style="width: 0%">
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
-                    <div class="info-box-2 bg-orange waves-effect">
-                        <div class="icon">
-                            <img src="/assets/admin/img/icons/database.svg" class="mt-2" width="65"/>
-                        </div>
-                        <div class="content">
-                            <div class="text cool-light">MONGODB CLOUD</div>
-                            <div class="number cool-light count-to db-size-stats">Loading</div>
-                            <div class="progress">
-                                <div class="progress-bar progress-bar-info db-pro" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100"
-                                     style="width: 0%">
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
-                    <div class="info-box-2 bg-teal waves-effect">
-                        <div class="icon">
-                            <img src="/assets/admin/img/icons/cloud.svg" class="mt-2" width="65"/>
-                        </div>
-                        <div class="content">
-                            <div class="text">SSD CLOUD</div>
-                            <div class="number count-to ssd-size-stats">Loading</div>
-                            <div class="progress">
-                                <div class="progress-bar progress-bar-teal ssd-pro" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100"
-                                     style="width: 0%">
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
-                    <div class="info-box-2 bg-purple waves-effect">
-                        <div class="icon">
-                            <img src="/assets/admin/img/icons/cloud.svg" class="mt-2" width="65"/>
-                        </div>
-                        <div class="content">
-                            <div class="text">LOCAL DRIVE</div>
-                            <div class="number count-to drive-size-stats">Loading</div>
-                            <div class="progress">
-                                <div class="progress-bar progress-bar-purple drive-pro" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100"
-                                     style="width: 0%">
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-<div class="row">
   <div class="col-md-12">
           <div class="row">
             <div class="col-md-4">
           <div class="form-group mt-2">
             <label>Default Email Address</label>
-            <input type="text" class="form-control form-control-success text-col-teal demail" autocomplete="off">
+            <input type="email" class="form-control form-control-success text-col-teal demail" autocomplete="off" spellcheck="false">
           </div>
         </div>
         <div class="col-md-4">
           <div class="form-group mt-2">
             <label>Default Phone Number</label>
-            <input type="text" class="form-control dphone" autocomplete="off">
+            <input type="text" class="form-control dphone" autocomplete="off" spellcheck="false">
           </div>
         </div>
         <div class="col-md-4">
           <div class="form-group mt-2">
             <label>Cash Rewards per Point (KES)</label>
-            <input type="number" class="form-control dcash" autocomplete="off">
+            <input type="number" class="form-control dcash" autocomplete="off" spellcheck="false">
           </div>
         </div>
         <div class="col-md-4">
           <div class="form-group mt-4">
             <label>Minimum Redeemable Points</label>
-            <input type="number" class="form-control dminpoints" autocomplete="off">
+            <input type="number" class="form-control dminpoints" autocomplete="off" spellcheck="false">
           </div>
         </div>
         <div class="col-md-4">
           <div class="form-group mt-4">
             <label>Maximum Redeemable Points</label>
-            <input type="number" class="form-control dmaxpoints" autocomplete="off">
+            <input type="number" class="form-control dmaxpoints" autocomplete="off" spellcheck="false">
           </div>
         </div>
         <div class="col-md-4">
         <div class="form-group mt-4">
           <label>Maximum Concurrent Driver Rides</label>
-          <input type="number" class="form-control dmaxrides" autocomplete="off">
+          <input type="number" class="form-control dmaxrides" autocomplete="off" spellcheck="false">
         </div>
       </div>
       <div class="col-md-4">
       <div class="form-group mt-4">
         <label>Default Chat Message</label>
-        <input type="text" class="form-control dchat" autocomplete="off">
+        <input type="text" class="form-control dchat" autocomplete="off" spellcheck="false">
       </div>
     </div>
       <div class="col-md-4">
       <div class="form-group mt-4">
         <label>User Files Daily Backup Time</label>
-        <input type="text" class="form-control dcronfs" autocomplete="off">
+        <input type="text" class="form-control dcronfs" autocomplete="off" spellcheck="false">
       </div>
     </div>
     <div class="col-md-4">
     <div class="form-group mt-4">
       <label>Full Database Daily Backup Time</label>
-      <input type="text" class="form-control dcrondb" autocomplete="off">
+      <input type="text" class="form-control dcrondb" autocomplete="off" spellcheck="false">
     </div>
   </div>
   <div class="col-md-4">
     <div class="form-group mt-4">
       <label>Pending Driver Payments Notification Time</label>
-      <input type="text" class="form-control dcronpn" autocomplete="off">
+      <input type="text" class="form-control dcronpn" autocomplete="off" spellcheck="false">
     </div>
   </div>
   <div class="col-md-4">
