--- a/views/partials/pages/settings.hbs
+++ b/views/partials/pages/settings.hbs
@@ -15,6 +15,7 @@
             <div class="shap two"></div>
             <div class="shap one three"></div>
             <div class="shap two four"></div>
+            {{>modules/stats}}
             {{>modules/setup}}
           </div>
         </div>
