--- a/views/partials/auth/login.hbs
+++ b/views/partials/auth/login.hbs
@@ -5,10 +5,10 @@
   <div class="container">
     <div class="row">
       <div class="col-md-4 offset-md-4 text-center">
-        <a href="{{developer}}" target="_blank"><img src="/assets/admin/img/logos/logo-310x310.png" class="main-logo animate__animated animate__fadeIn"/></a>
+        <a href="javascript:void(0)"><img src="/assets/admin/img/logos/logo-310x310.png" class="main-logo magictime puffIn"/></a>
         <div class="card card-login animate__animated animate__fadeIn">
           <div class="card-header card-header-success">
-            <h4 class="card-title text-center">Tufike Pamoja Admin Login</h4>
+            <h4 class="card-title text-center p-0 m-0">Tufike Pamoja Admin Login</h4>
           </div>
           <div class="card-content">
             <div class="login-preloader"><img src="/assets/admin/img/preloaders/oval.svg"/></div>
@@ -22,7 +22,7 @@
                 <input type="password" class="form-control lpassword">
               </div>
               <div class="form-group pl-4 pr-4">
-                <button type="button" class="btn btn-primary btn-block admin-login-button">Submit</button>
+                <button type="button" class="btn btn-lg bg-purple waves-effect btn-block admin-login-button">Login</button>
               </div>
           </div>
           <div class="card-footer">
