--- a/views/partials/incs/footer.hbs
+++ b/views/partials/incs/footer.hbs
@@ -1,10 +1,8 @@
 <div id="server-sound"></div>
-<!--   Core JS Files   -->
-<script src="/assets/admin/js/core/jquery.min.js"></script>
+<script src="/assets/admin/js/core/jquery-3.5.1.min.js"></script>
 <script src="/assets/admin/js/socket.io.js"></script>
 <script src="/assets/admin/js/core/popper.min.js"></script>
 <script src="/assets/admin/js/core/bootstrap-material-design.min.js"></script>
-<!--<script src="/assets/admin/js/plugins/chartist.min.js"></script>-->
 <script src="/assets/admin/js/plugins/bootstrap-notify.js"></script>
 <script src="/assets/admin/plugins/datatables/datatables.min.js"></script>
 <script src="/assets/admin/plugins/select2/js/select2.min.js"></script>
@@ -20,7 +18,6 @@
 <script src="/assets/admin/plugins/chartjs/Chart.min.js"></script>
 <script src="/assets/admin/plugins/pace/pace.min.js"></script>
 <script src="/assets/admin/plugins/nouislider/nouislider.js"></script>
-<script src="https://maps.googleapis.com/maps/api/js?&libraries=places&key=AIzaSyB93SMw6mEfNZrcjOduAMkuJgFg5zcme04"></script>
 <script>
 var env = 'test';
 if (env === 'dev') {
