--- a/views/partials/incs/topnav.hbs
+++ b/views/partials/incs/topnav.hbs
@@ -1,6 +1,6 @@
 <div class="main-panel">
   <!-- Navbar -->
-  <nav class="navbar navbar-expand-lg navbar-dark navbar-bg-dark navbar-bg-dark sticky-top ">
+  <nav class="navbar navbar-expand-lg navbar-dark navbar-bg-dark navbar-bg-dark ">
     <div class="container-fluid">
       <div class="navbar-wrapper current-rates">
         <input type="hidden" class="aid" value="{{pdata.uid}}">
