--- a/views/partials/incs/topnav.hbs
+++ b/views/partials/incs/topnav.hbs
@@ -52,7 +52,7 @@
                   <a class="dropdown-item" href="/profile">Profile</a>
                   <a class="dropdown-item" href="/users">Users</a>
                   <a class="dropdown-item" href="/settings">Settings</a>
-                  <a class="dropdown-item logout-admin" href="javascript:void(0)">Sign Out</a>
+                  <a class="dropdown-item" href="/logout">Sign Out</a>
                 </div>
               </li>
 
