--- a/views/partials/modules/driverpayments.hbs
+++ b/views/partials/modules/driverpayments.hbs
@@ -5,7 +5,7 @@
         <ul class="nav nav-tabs" data-tabs="tabs">
           <li class="nav-item">
             <a class="nav-link active" href="/transactions">
-              <i class="f7-icons">money_dollar_circle</i> Tufike Pamoja Recent Driver Payments
+              <i class="f7-icons">money_dollar_circle</i> Tufike Pamoja Recent Driver Transactions
               <div class="ripple-container"></div>
             </a>
           </li>
