Notification icon link updates

--- a/views/partials/incs/pagefooter.hbs
+++ b/views/partials/incs/pagefooter.hbs
@@ -10,7 +10,7 @@
 		</div>
 		<div class="col-md-2 d-xs-none">
 			<i class="f7-icons size-15 align-middle text-primary">text_bubble_fill</i>
-			<a href="javascript:void(0)" class="sms-balance fix-foot green-link pay-sms">Loading SMS API</a>
+			<a href="javascript:void(0)" class="sms-balance fix-foot green-link pay-sms">Loading SMS Balance</a>
 		</div>
 		<div class="col-md-6 w-pad">
 			<a href="https://lexacle.com" target="_blank" class="fix-foot green-link">&copy; <span class="current-year blue-link"></span> Lexacle Technologies Ltd</a>
