--- a/views/partials/auth/login.hbs
+++ b/views/partials/auth/login.hbs
@@ -22,7 +22,7 @@
                 <input type="password" class="form-control lpassword">
               </div>
               <div class="form-group pl-4 pr-4">
-                <button type="button" class="btn btn-lg bg-purple waves-effect btn-block admin-login-button">Login</button>
+                <button type="submit" class="btn btn-lg bg-purple waves-effect btn-block admin-login-button">Login</button>
               </div>
           </div>
           <div class="card-footer">
