--- a/views/partials/incs/footer.hbs
+++ b/views/partials/incs/footer.hbs
@@ -6,6 +6,7 @@
 <script src="/assets/admin/js/plugins/bootstrap-notify.js"></script>
 <script src="/assets/admin/plugins/datatables/datatables.min.js"></script>
 <script src="/assets/admin/plugins/select2/js/select2.min.js"></script>
+<script src="/assets/admin/plugins/croppie/croppie.js"></script>
 <script src="/assets/admin/plugins/momentjs/moment.js"></script>
 <script src="/assets/admin/plugins/bootstrap-material-datetimepicker/js/bootstrap-material-datetimepicker.js"></script>
 <script src="/assets/admin/plugins/lightg/js/lightgallery-all.js"></script>
