--- a/views/partials/incs/header.hbs
+++ b/views/partials/incs/header.hbs
@@ -16,6 +16,7 @@
   <link rel="stylesheet" href="/assets/admin/plugins/owl.carousel/assets/owl.carousel.min.css" type="text/css">
   <link rel="stylesheet" href="/assets/admin/plugins/owl.carousel/assets/owl.theme.default.min.css" type="text/css">
   <link rel="stylesheet" href="/assets/admin/plugins/datatables/datatables.min.css" type="text/css"/>
+  <link rel="stylesheet" href="/assets/admin/plugins/croppie/croppie.css" type="text/css"/>
   <link rel="stylesheet" href="/assets/admin/plugins/bootstrap-material-datetimepicker/css/bootstrap-material-datetimepicker.css" type="text/css"/>
   <link rel="stylesheet" href="/assets/admin/plugins/select2/css/select2.css" type="text/css"/>
   <link rel="stylesheet" href="/assets/admin/plugins/nouislider/nouislider.min.css" type="text/css"/>
