--- a/views/partials/incs/modals.hbs
+++ b/views/partials/incs/modals.hbs
@@ -10,6 +10,22 @@
     </div>
   </div>
 </div>
+<div class="modal fade" id="modal-aphoto" role="dialog" aria-hidden="true">
+  <div class="modal-dialog modal-sm modal-col-dark">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title blue-link" id="exampleModalLabel">Crop and Upload Photo</h5>
+        <button type="button" class="close col-white" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body text-center">
+        <div class="aphoto" id="aphoto"></div>
+        <button class="btn bg-purple upload-button waves-effect">Upload Photo</button>
+      </div>
+    </div>
+  </div>
+</div>
 <div class="modal fade" id="pay-sms" role="dialog" aria-hidden="true">
   <div class="modal-dialog modal-col-dark">
     <div class="modal-content">
