--- a/views/partials/pages/home.hbs
+++ b/views/partials/pages/home.hbs
@@ -12,7 +12,7 @@
                 </div>
                 <div class="card-footer">
                   <div class="stats">
-                    <a href="/rides" class="warning-link"><span class="count count-other-rides">0</span> Cancelled Rides</a>
+                    <a href="/rides" class="warning-link"><span class="count count-other-rides">0</span> Cancelled / Rejected Rides</a>
                   </div>
                 </div>
               </div>
