--- a/views/partials/pages/profile.hbs
+++ b/views/partials/pages/profile.hbs
@@ -10,12 +10,8 @@
                 </a>
             </h4>
           </div>
-          <div class="card-body xpage">
-            <div class="shap one"></div>
-            <div class="shap two"></div>
-            <div class="shap one three"></div>
-            <div class="shap two four"></div>
-            {{> modules/f7icons}}
+          <div class="card-body">
+            {{> modules/profile}}
           </div>
         </div>
       </div>
