--- a/public/assets/admin/css/app.css
+++ b/public/assets/admin/css/app.css
@@ -16,8 +16,12 @@
 {
   -webkit-background-clip: text;
   background-clip: text;
-  background-image: linear-gradient(60deg, #46AEEA, #5CC7E6) !important;
+  background-image: linear-gradient(60deg, #293BEB, #5CC7E6) !important;
   color: transparent !important;
+}
+.admin-description
+{
+  height: 128px;
 }
 /* Checkbox & Radio ============================ */
 /* Radio Buttons
