--- a/views/partials/modules/users.hbs
+++ b/views/partials/modules/users.hbs
@@ -8,26 +8,26 @@
         <div class="bg-transluscent mb-4 pl-4 pr-4 pt-2">
           <div class="form-group mt-4">
             <label>First Name</label>
-            <input type="text" class="form-control fname" autocomplete="off">
+            <input type="text" class="form-control fname" autocomplete="off" spellcheck="false">
           </div>
           <div class="form-group mt-4">
             <label>Last Name</label>
-            <input type="text" class="form-control lname" autocomplete="off">
+            <input type="text" class="form-control lname" autocomplete="off" spellcheck="false">
           </div>
           <div class="form-group mt-4">
             <label>Email Address</label>
-            <input type="email" class="form-control email" autocomplete="off">
+            <input type="email" class="form-control email" autocomplete="off" spellcheck="false">
           </div>
           <div class="form-group mt-4">
             <label>Phone Number</label>
-            <input type="text" class="form-control phone" autocomplete="off">
+            <input type="text" class="form-control phone" autocomplete="off" spellcheck="false">
           </div>
           <div class="form-group mt-4">
             <label>Password</label>
-            <input type="password" class="form-control password" autocomplete="off">
+            <input type="password" class="form-control password" autocomplete="off" spellcheck="false">
           </div>
           <div class="form-group mt-4">
-            <button class="btn btn-block btn-success create-account">Create Admin Account</button>
+            <button class="btn btn-block bg-green waves-effect create-account">Create Admin Account</button>
           </div>
         </div>
       </div>
